--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  margin: auto;
+  padding: auto auto;
+  justify-content: center;
 }
 
 h1 {
